# nauka

./: .gitignore  CLAUDE.md  CLOUD_HYPERVISOR_VERSION  CNAME  Cargo.toml  LICENSE  README.md  RELEASING.md  index.html  versions.json
core/: Cargo.toml
core-macros/: Cargo.toml
core-macros/src/: lib.rs
core-macros/tests/: compile_fail.rs
core-macros/tests/compile_fail/: access_invalid_duration.rs  access_invalid_duration.stderr  access_invalid_type.rs  access_invalid_type.stderr  access_missing_name.rs  access_missing_name.stderr  access_missing_signin.rs  access_missing_signin.stderr  access_unknown_key.rs  access_unknown_key.stderr  assert_without_expr.rs  assert_without_expr.stderr  cascade_missing_field.rs  cascade_missing_field.stderr  cascade_wrong_type.rs  cascade_wrong_type.stderr  created_at_collision.rs  created_at_collision.stderr  custom_actions_bad_name.rs  custom_actions_bad_name.stderr  double_underscore_table.rs  double_underscore_table.stderr  duplicate_assert.rs  duplicate_assert.stderr  invalid_scope.rs  invalid_scope.stderr  kebab_case_table.rs  kebab_case_table.stderr  missing_id.rs  missing_id.stderr  missing_scope.rs  missing_scope.stderr  missing_table.rs  missing_table.stderr  multiple_ids.rs  multiple_ids.stderr  pascal_case_table.rs  pascal_case_table.stderr  restrict_bad_syntax.rs  restrict_bad_syntax.stderr  (+22 more)
core/src/: api.rs  lib.rs  logging.rs  resource.rs
core/tests/: resource_macro_smoke.rs
layers/api/: Cargo.toml
layers/api-client/: Cargo.toml
layers/api-client/src/: lib.rs
layers/api/src/: crud.rs  deps.rs  error.rs  graphql.rs  hypervisor.rs  iam.rs  lib.rs  mesh.rs  openapi.rs  org.rs  principal.rs  router.rs  tls.rs
layers/api/tests/: docs_surface.rs  hypervisor_roundtrip.rs  iam_roundtrip.rs  mesh_roundtrip.rs  org_roundtrip.rs
layers/compute/: Cargo.toml
layers/compute/schemas/: vm.surql
layers/compute/src/: lib.rs  overview.mdx  scheduler.mdx  scheduler.rs
layers/compute/src/image/: handlers.rs  mod.rs  overview.mdx  registry.rs  types.rs
layers/compute/src/runtime/: detect.rs  gvisor.rs  kvm.rs  mod.rs  overview.mdx
layers/compute/src/vm/: handlers.rs  mod.rs  overview.mdx  provision.rs  store.rs  types.rs
layers/core/: Cargo.toml  README.md  build.rs
layers/core/src/: addressing.mdx  addressing.rs  config.mdx  config.rs  crypto.mdx  crypto.rs  error.mdx  error.rs  id.mdx  id.rs  lib.rs  logging.mdx  logging.rs  overview.mdx  process.mdx  process.rs  transport.mdx  transport.rs  validate.mdx  validate.rs  version.mdx  version.rs
layers/core/src/api/: error-response.mdx  error_response.rs  middleware.mdx  middleware.rs  mod.rs  route-gen.mdx  route_gen.rs  server.mdx  server.rs
layers/core/src/resource/: api_response.rs  builder.mdx  builder.rs  cli-gen.mdx  cli_gen.rs  constraint.mdx  constraint.rs  dispatch.mdx  dispatch.rs  errors.rs  identity.mdx  identity.rs  lint.rs  mod.rs  operation.mdx  operation.rs  overview.mdx  presentation.mdx  presentation.rs  registry.mdx  registry.rs  schema.mdx  schema.rs  scope.mdx  scope.rs  validation.rs
layers/core/src/ui/: color.mdx  color.rs  confirm.mdx  confirm.rs  mod.rs  prompt.mdx  prompt.rs  spinner.mdx  spinner.rs  table.mdx  table.rs  time-fmt.mdx  time_fmt.rs
layers/core/tests/: resource_framework.rs  validation_pipeline.rs
layers/core/tests/e2e/: Cargo.toml  resource_framework_test.rs
layers/forge/: Cargo.toml
layers/forge/src/: daemon.rs  lib.rs  overview.mdx  service.rs  types.rs
layers/forge/src/observer/: health.rs  mod.rs  network.rs  process.rs
layers/forge/src/reconciler/: health.rs  mod.rs  natgw.rs  overview.mdx  pd.rs  store.rs  tikv_endpoints.rs  vm.rs  vpc.rs
layers/hypervisor/: Cargo.toml  definition.surql
layers/hypervisor/alerts/: controlplane.rules.yml
layers/hypervisor/src/: compute_setup.rs  daemon.rs  definition.rs  definition.surql  detect.rs  doctor.mdx  doctor.rs  handlers.mdx  handlers.rs  lib.rs  overview.mdx  systemd.rs
layers/hypervisor/src/controlplane/: backup.rs  mod.rs  ops.mdx  ops.rs  overview.mdx  pd_client.rs  service.mdx  service.rs  store.mdx  store.rs
layers/hypervisor/src/fabric/: announce.mdx  announce.rs  backend.mdx  backend.rs  daemon.rs  health.mdx  health.rs  mesh.mdx  mesh.rs  mod.rs  ops.mdx  ops.rs  peer.mdx  peer.rs  peering-client.mdx  peering-server.mdx  peering.mdx  peering.rs  peering_client.rs  peering_server.rs  service.mdx  service.rs  state.mdx  state.rs  tls.mdx  tls.rs  wg.mdx  wg.rs
layers/hypervisor/src/mesh/: address.rs  certs.rs  crypto.rs  definition.rs  definition.surql  error.rs  join.rs  key.rs  mod.rs  peer.rs  reconciler.rs  state.rs
layers/hypervisor/src/storage/: mod.rs  ops.mdx  ops.rs  overview.mdx  region.mdx  region.rs  service.mdx  service.rs
layers/hypervisor/tests/: schema_roundtrip.rs
layers/hypervisor/tests/e2e/: Cargo.toml  cli_test.sh  parallel_join_test.rs  peering_test.rs
layers/iam/: Cargo.toml
layers/iam/src/: audit.rs  auth.rs  can.rs  definition.rs  error.rs  lib.rs  ops.rs  seed.rs  token.rs
layers/iam/src/definition/: active_session.rs  api_token.rs  audit_event.rs  env.rs  mod.rs  org.rs  password_reset_token.rs  permission.rs  project.rs  role.rs  role_binding.rs  service_account.rs  user.rs
layers/iam/tests/: api_token.rs  auth_flow.rs  field_permissions.rs  governance.rs  password_reset.rs  role_bindings.rs  scope_tree.rs
layers/network/: Cargo.toml
layers/network/schemas/: natgw.surql  peering.surql  subnet.surql  vpc.surql
layers/network/src/: lib.rs  overview.mdx  validate.rs
layers/network/src/vpc/: handlers.rs  mod.rs  overview.mdx  provision.mdx  (+3 more)
layers/org/: Cargo.toml
layers/org/schemas/: env.surql  user.surql
layers/org/src/: definition.surql  handlers.rs  lib.rs  overview.mdx  sdk_bridge.rs  store.rs  types.rs
layers/state/: Cargo.toml  README.md  definition.surql
layers/state/schemas/: bootstrap.surql
layers/state/src/: cluster.mdx  cluster.rs  db.rs  embedded.rs  error.rs  lib.rs  overview.mdx  schema.rs  sdk_bridge.rs  writer.rs
layers/state/tests/: raft_cluster.rs  writer_transaction.rs
(+22466 files in other folders)
