[workspace]
resolver = "2"
members = ["bin/nauka"]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sifrah/nauka"
keywords = ["cloud", "wireguard", "mesh", "control-plane", "infrastructure"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
