[workspace]
resolver = "2"
members = ["bin/nauka", "layers/hypervisor", "layers/state"]

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sifrah/nauka"
keywords = ["cloud", "wireguard", "mesh", "control-plane", "infrastructure"]
categories = ["network-programming", "command-line-utilities"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
defguard_wireguard_rs = "0.9"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
surrealdb = { version = "3", default-features = false, features = ["kv-surrealkv"] }
openraft = { version = "0.10.0-alpha.17", features = ["serde", "type-alias"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
nauka-hypervisor = { path = "layers/hypervisor" }
nauka-state = { path = "layers/state" }
