[package]
name = "nauka-core"
description = "Nauka core — shared cross-cutting infrastructure (logging, errors, typed IDs, utilities)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true }
