[package]
name = "nauka-api"
description = "Nauka API layer — axum REST + GraphQL server built from #[resource] descriptors"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core.workspace = true
nauka-state.workspace = true
nauka-hypervisor.workspace = true
nauka-iam.workspace = true
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
surrealdb.workspace = true
linkme.workspace = true

[dev-dependencies]
tempfile = "3"
nauka-api-client = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
