[package]
name = "nauka-compute"
description = "Compute layer — virtual machine lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core = { path = "../core" }
nauka-state = { path = "../state" }
nauka-hypervisor = { path = "../hypervisor" }
nauka-org = { path = "../org" }
nauka-network = { path = "../network" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tikv-client = "0.4"

[dev-dependencies]
tempfile = "3"
