[package]
name = "nauka-core"
description = "Core resource framework for Nauka cloud platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
console = "0.15"
indicatif = "0.17"
terminal_size = "0.4"
unicode-width = "0.2"
dialoguer = "0.11"
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
http = "1"
clap = { workspace = true, features = ["derive", "env"] }
rand = "0.8"
ulid = "1.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
bs58 = "0.5"
toml = "0.8"
async-trait = "0.1"
dirs = "5"
inventory.workspace = true
libc = "0.2"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
