[package]
name = "nauka-forge"
description = "Forge — per-node resource reconciler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core = { path = "../core" }
nauka-state = { path = "../state" }
nauka-hypervisor = { path = "../hypervisor" }
nauka-compute = { path = "../compute" }
nauka-network = { path = "../network" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tikv-client = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
