[package]
name = "nauka-hypervisor"
description = "Hypervisor layer — mesh networking, consensus, compute, storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core = { path = "../core" }
inventory.workspace = true
nauka-state = { path = "../state" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
base64 = "0.22"
hostname = "0.4"
dirs = "5"
# P2.8 (sifrah/nauka#212): `tikv-client` is no longer a direct dep —
# `ClusterDb` now routes through `nauka_state::EmbeddedDb::open_tikv`,
# which pulls the TiKv driver in transitively via
# `surrealdb-tikv-client` (enabled by the `kv-tikv` feature on the
# `surrealdb` crate in `layers/state/Cargo.toml`). The crate is still
# in the dep graph; we just stopped depending on it from this
# manifest so call sites have a single sanctioned path to TiKV.
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
rustls-pki-types = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
