[package]
name = "nauka-iam"
description = "Nauka IAM layer — identity, authentication, authorization (see IAM epic)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core.workspace = true
nauka-core-macros.workspace = true
nauka-state.workspace = true
linkme.workspace = true
surrealdb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
base64.workspace = true
argon2.workspace = true
sha2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
