[package]
name = "nauka-network"
description = "Network layer — VPC, Subnet, VPC Peering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core = { path = "../core" }
inventory.workspace = true
nauka-state = { path = "../state" }
nauka-hypervisor = { path = "../hypervisor" }
nauka-org = { path = "../org" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tikv-client = "0.4"
ipnet = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
