[package]
name = "nauka-state"
description = "State persistence for Nauka — embedded SurrealDB (SurrealKV) + distributed TiKV"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nauka-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tikv-client = "0.4"
tokio.workspace = true
# Force vendored OpenSSL into the build graph: tikv-client and
# surrealdb-tikv-client (pulled in by `surrealdb/kv-tikv`) both pull openssl-sys
# via prometheus → reqwest → native-tls. Without a vendored OpenSSL the musl
# cross-compile cannot find system openssl. The workspace declaration already
# enables the `vendored` feature. This stays until P2.16 (sifrah/nauka#220)
# removes the legacy tikv-client.
openssl.workspace = true
# P2.1 (sifrah/nauka#205): surrealdb SDK with both kv-surrealkv and kv-tikv
# permanently enabled. kv-surrealkv is the embedded backend used by every
# hypervisor; kv-tikv is the distributed backend used when the production
# binary talks to a shared TiKV cluster via the SurrealDB SDK. The former
# P1-era `spike-tikv` gate is gone — kv-tikv is now always on.
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-surrealkv", "kv-tikv"] }

[[bin]]
name = "p0-1-spike"
path = "src/bin/p0_1_spike.rs"

[[bin]]
name = "p0-3-spike"
path = "src/bin/p0_3_spike.rs"

[[bin]]
name = "p1-9-integration"
path = "src/bin/p1_9_integration.rs"

[[bin]]
name = "p2-4-spike"
path = "src/bin/p2_4_spike.rs"

[dev-dependencies]
tempfile = "3"
