[package]
name = "nauka-state"
description = "Nauka state layer — SurrealDB embedded + Raft distributed consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
surrealdb.workspace = true
openraft.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
