[package]
name = "nauka-core-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "resource_framework"
path = "resource_framework_test.rs"

[dependencies]
nauka-core = { path = "../../" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
http = "1"
tower = "0.5"
